Fixed bug, found out how to align cards

--- a/featurescss/style.css
+++ b/featurescss/style.css
@@ -27,7 +27,7 @@
 	background: #6891F9;
 }
 
-.centercolumn > .col {
+.center-cols > .col {
 	float: none;
 	display: inline-block;
 	text-align: initial;
